--- a/main.html
+++ b/main.html
@@ -6,10 +6,10 @@
     <title>Document</title>
 </head>
 <style>
-    @import url("https://fonts.google.com/specimen/Manrope");
+  @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;700&display=swap');
     body{
         background-color: hsl(218, 23%, 16%);
-        font-family: Manrope;
+        font-family: josefin Sans;
     }
     .adviceHead{
         color: hsl(150, 100%, 66%);
